--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@8.15.0",
   "scripts": {
     "dev": "pnpm -r --parallel dev",
     "build": "pnpm -r build"
