--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nest start --watch",
     "start": "node dist/main.js",
+    "start:prod": "node dist/main.js",
     "build": "nest build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
