--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx src/index.ts",
     "start": "node --enable-source-maps dist/index.js",
+    "start:prod": "node --enable-source-maps dist/index.js",
     "build": "tsup src/index.ts --format esm --dts --minify --sourcemap",
     "set-webhook": "tsx src/index.ts --set-webhook",
     "delete-webhook": "tsx src/index.ts --delete-webhook"
