--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -16,7 +16,7 @@
     "express": "^4.19.2",
     "zod": "^3.23.8",
     "node-fetch": "^3.3.2",
-    "@resend/sdk": "^2.0.0"
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "tsup": "^8.2.4",
