--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "tsx src/index.ts",
-    "start": "node --enable-source-maps dist/index.js",
-    "start:prod": "node --enable-source-maps dist/index.js",
-    "build": "tsup src/index.ts --format esm --dts --minify --sourcemap",
+    "start": "node dist/index.js",
+    "start:prod": "node dist/index.js",
+    "start:webhook": "node dist/server.js",
+    "build": "tsup src/index.ts src/server.ts --format esm --dts --minify --sourcemap",
     "set-webhook": "tsx src/index.ts --set-webhook",
     "delete-webhook": "tsx src/index.ts --delete-webhook"
   },
