Remove sensitive data from .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # BOT
-TELEGRAM_BOT_TOKEN=8561886016:AAGKNTaHkEfLqerp57l9fp49gHLJm6DOQr0
-BOT_WEBHOOK_SECRET=studentdeals_2025_secret
+TELEGRAM_BOT_TOKEN=___
+BOT_WEBHOOK_SECRET=___
 BOT_WEBHOOK_BASE=https://<your-render-bot-domain>
 FRONTEND_URL=https://studentdeals-uz-web.vercel.app
-API_URL=https://https://studentdeals-uz.onrender.com/
+API_URL=https://<your-render-api-domain>
 
 # MAIL
-RESEND_API_KEY=re_HXW7aXez_8P1z8kH1Z5gRopsSv2GyZtZS
+RESEND_API_KEY=___
 
 # STUDENT VERIFICATION
 STUDENT_EMAIL_DOMAINS=.edu,.ac.uk,.edu.uz
