--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,16 +14,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
-    "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^5.19.0",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "resend": "^4.0.0"
+    "reflect-metadata": "^0.2.2",
+    "resend": "^4.0.0",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -31,8 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.0",
     "prisma": "^5.19.0",
-    "typescript": "^5.6.3",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
-
