--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: studentdeals-api
     env: node
-    buildCommand: npm install -g pnpm && pnpm install --frozen-lockfile && pnpm -w --filter @studentdeals/api build
+    buildCommand: npm install -g pnpm && pnpm install --frozen-lockfile && cd apps/api && pnpm prisma generate && pnpm prisma migrate deploy && cd ../.. && pnpm -w --filter @studentdeals/api build
     startCommand: pnpm -w --filter @studentdeals/api start:prod
     healthCheckPath: /healthz
     envVars:
